# rustcord

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: devices.rs  gui.rs  main.rs  recorder.rs  recording.rs
src/core/: encoder.rs  mod.rs  pipewire.rs
src/devices/: audio.rs  screen.rs
src/extensions/: hardware_accel.rs  mod.rs  overlays.rs  plugin_system.rs  scene_switcher.rs  streaming.rs
src/gui/: controls.rs  mod.rs  preview.rs  settings_dialog.rs  window.rs
