[package]
name = "rustcord"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.7"
rfd = "0.15.3"
smol = "2.0.2"
pipewire = "0.8.0"
ffmpeg-next = "7.1.0"
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
eframe = "0.31.1"
egui = "0.31.1"
anyhow = "1.0"
bindgen = "0.71.1"


[[bin]]
name = "rustcord"
path = "src/main.rs"
