[package]
name = "rustcord"
version = "0.1.0"
edition = "2021"
[package]
name = "waycord_recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4  = "0.7"
glib = "0.18"
libadwaita = "0.5.1"
gstreamer = "0.22"
gstreamer-video = "0.22"
gstreamer-pbutils = "0.22"
pipewire = "0.8.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"


[[bin]]
name = "rustcord"
path = "src/main.rs"
